--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kamus Indonesia - Jepang</string>
+    <string name="app_name">Kamus Kita</string>
     <string name="ind_jpn">Indonesia - Jepang</string>
     <string name="jpn_ind">Jepang - Indonesia</string>
     <string name="enter_word">Masukan sesuatu disini…</string>
