--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Kamus Kita</string>
     <string name="ind_jpn">Indonesia - Jepang</string>
     <string name="jpn_ind">Jepang - Indonesia</string>
-    <string name="about">About</string>
+    <string name="about">Tentang</string>
     <string name="enter_word">Masukan sesuatu disini…</string>
     <string name="search">Cari dengan Berry Ravindran</string>
     <string name="search2">Cari dengan Reverse Colussi</string>
